hphp/hack/test/typecheck/toplevel_requires/extends.php.legacy_decl.exp
File "extends.php", line 7, characters 19-21:
Unbound name: Bar (an object type) (Naming[2049])
